<resources>
    <string name="app_name">Siem Usuarios</string>
    <string name="name">SIEM</string>
    <string name="nameToolbar">S I E M</string>

    <!-- Errores -->
    <string name="error">Hubo un error. Intente de nuevo más tarde.</string>
    <string name="errorNoPlayServices">Debe instalar Google Play Services desde el Play Store.</string>
    <string name="errorPlaceApi">Ha ocurrido un error: %1$d</string>
    <string name="errorNoWhatsapp">Debe instalar Whatsapp desde el Play Store.</string>
    <string name="errorFaltanDatos">Debe completar todos los datos para continuar</string>
    <string name="errorNoLocation">Debe completar la ubicación para continuar</string>
    <string name="errorNoSintoma">Debe seleccionar al menos un síntoma para continuar</string>

    <!-- Menu -->
    <string name="menuWhatsapp">Whatsapp</string>
    <string name="menuLlamar">Llamar</string>
    <string name="menuPerfiles">Perfiles</string>
    <string name="menuConsultarAuxilio">Consultar auxilio</string>
    <string name="generarAuxilio">Generar auxilio</string>
    <string name="cargarCodigoAuxilio">Cargar código de auxilio</string>

    <!-- Whatsapp -->
    <string name="sendWhatsapp" translatable="false">https://api.whatsapp.com/send?phone=%1$s&amp;text=%2$s</string>
    <string name="textSendWhatsapp">Hola SIEM!</string>

    <!-- Precategorizacion -->
    <string name="ubicacion">Ubicación</string>
    <string name="noPermissionLocationGranted">Debe otorgar el permiso para poder obtener la ubicación.</string>
    <string name="noPermissionContactGranted">Debe otorgar el permiso para poder obtener la información de sus contactos.</string>
    <string name="activateGPS">Debe activar el GPS para continuar.</string>
    <string name="getLocation">Estamos obteniendo su ubicación.</string>
    <string name="titleUbicacion">¿Dónde desea recibir la ambulancia?</string>
    <string name="titleSintomas">¿Qué síntomas presenta?</string>
    <string name="titleAjuste">Complete algunos datos adicionales</string>

    <!-- Perfiles -->
    <string name="msgNoPerfiles">Pulse el + para agregar un nuevo perfil</string>
    <string name="menuAgregarPerfil">Agregar</string>

    <!-- Agregar perfil -->
    <string name="seleccionarContacto">Seleccionar contacto</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="nroContacto">Nro. de contacto</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="perfilEliminado">Se eliminó el perfil</string>
    <string name="deshacer">Deshacer</string>

    <!-- Seleccionar contacto -->
    <string name="seleccionarPerfil">Seleccionar perfil</string>
    <string name="agregarNuevoPerfil">Agregar nuevo perfil</string>

    <!-- Generar auxilio -->
    <string name="auxilioIngresar">Auxilio a generar</string>
    <string name="ubicacionDetalle"><![CDATA[<b>Ubicación:</b> %1$s]]></string>
    <string name="nombreDetalle"><![CDATA[<b>Nombre:</b> %1$s]]></string>
    <string name="contactoDetalle"><![CDATA[<b>Contacto:</b> %1$s]]></string>
    <string name="referencia">Referencia de la ubicación</string>
    <string name="observaciones">Observaciones</string>
    <string name="noEspecificado">No especificado</string>
    <string name="motivosDetalle"><![CDATA[<b>%1$s:</b> %2$s]]></string>
    <string name="deseaGenerarAuxilio">Desea generar el auxilio?</string>
    <string name="minimumMotivos">Debe haber al menos 1 motivo</string>
    <string name="exampleReferencia">Por ejemplo: Av. Rivadavia 1500 3°A. Puerta blanca</string>
    <string name="estadoPendiente">Pendiente</string>
    <string name="auxilioGeneradoCorrectamente">Auxilio generado correctamente.\nCodigo de auxilio: %1$s</string>

    <!-- Consultar auxilio -->
    <string name="estadoDescripcion">Estado: %1$s</string>
    <string name="ingresarCodigo">Código de auxilio</string>
    <string name="suscribirseCorrectamente">Se suscribió correctamente al auxilio %1$s</string>
    <string name="errorNoSuscribirse">No se pudo suscribir al auxilio</string>
    <string name="errorCodigoAuxilio">Código de auxilio incorrecto</string>

    <!-- Notification -->
    <string name="auxilioChangeStatus">El auxilio %1$s ha cambiado de estado</string>
    <string name="auxilioEnCurso">%1$s\nLlegará aproximadamente en %2$s.\nDistancia aproximada %3$s</string>
</resources>
