<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menuWhatsapp"
        android:id="@+id/menuWhatsapp"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_whatsapp"/>

    <item
        android:title="@string/menuLlamar"
        android:id="@+id/menuLlamar"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_phone"/>

    <item
        android:title="@string/menuPerfiles"
        android:id="@+id/menuPerfiles"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

    <item
        android:title="@string/menuConsultarAuxilio"
        android:id="@+id/menuConsultarAuxilio"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"/>

</menu>